// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiTab-wrapper"
      >
        Tab Label
      </span>
    </button>
  </div>
</div>
`;

exports[`Tab disabled tab 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled Mui-disabled"
      disabled=""
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiTab-wrapper"
      >
        Tab Label
      </span>
    </button>
  </div>
</div>
`;

exports[`Tab tab with icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiTab-wrapper"
      >
        <div
          id="Icon"
        />
        Tab Label
      </span>
    </button>
  </div>
</div>
`;
